--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Minor Distractions</title>
         <style>
             table {
                 border-collapse: collapse;
